Now it's too big (that's what she said). Resizing navbar and footer, header spacing and correcting grammar mistake in footer

--- a/static/style.css
+++ b/static/style.css
@@ -17,7 +17,7 @@ nav {
 }
 
 header {
-    padding-top: 6rem;
+    padding-top: 5.5rem;
     background-color: rgb(22, 70, 22);
 }
 
